<resources>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    // Login Activity xml (HomePage)
    <string name="subject_to_change">Subject To Change</string>
    <string name="home_page">Home Page</string>
    <string name="logout">Logout</string>
    <string name="take_photo">Take Photo</string>
    <string name="scan_text">Scan Text</string>
    <string name="generate">GENERATE</string>
    <string name="keywords_textview">TEXT APPEARS HERE</string>


    // Main Activity XML (Intro Login/register page)
    <string name="find_my_professor">Find My Professor</string>
    <string name="something_something_login">Something something login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="syracuse_university">Syracuse University</string>

    // Register Activity XML (Register Page)

    //Blacklist
    <string-array name="Blacklist">
        <item>Introduction</item>
        <item>Intro</item>
        <item>Basics</item>
        <item>Basic</item>
        <item>to</item>
        <item>Of</item>
        <item>And</item>
        <item>But</item>
        <item>In</item>
        <item>Into</item>
        <item>Our</item>
        <item>Out In-Depth</item>
        <item>Basic Tutorial</item>
        <item>Review</item>
        <item>Preview</item>
        <item>Properties</item>
        <item>Inclusive</item>
        <item>Exclusive</item>
        <item>Approach</item>
        <item>Outline</item>
        <item>Analysis</item>
        <item>Overview</item>
        <item>Methods</item>
        <item>For</item>
        <item>Explanation</item>
        <item>Explaining</item>
        <item>Aspects</item>
        <item>Core</item>
        <item>Concepts</item>
        <item>Step-by-step</item>
        <item>Steps</item>
        <item>Procedural</item>
        <item>Information</item>
        <item>introduction</item>
        <item>intro</item>
        <item>basics</item>
        <item>basic</item>
        <item>to</item>
        <item>of</item>
        <item>and</item>
        <item>but</item>
        <item>in</item>
        <item>into</item>
        <item>our</item>
        <item>out in-depth</item>
        <item>basic tutorial</item>
        <item>review</item>
        <item>preview</item>
        <item>properties</item>
        <item>inclusive</item>
        <item>exclusive</item>
        <item>approach</item>
        <item>outline</item>
        <item>analysis</item>
        <item>overview</item>
        <item>methods</item>
        <item>for</item>
        <item>explanation</item>
        <item>explaining</item>
        <item>aspects</item>
        <item>core</item>
        <item>concepts</item>
        <item>step-by-step</item>
        <item>steps</item>
        <item>procedural</item>
        <item>information</item>
        <item>A</item>
        <item>An</item>
        <item>And</item>
    </string-array>

</resources>