<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterUser">


    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/home_page"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/takePhoto"
        android:layout_width="167dp"
        android:layout_height="73dp"
        android:layout_marginEnd="16dp"
        android:onClick="takePhoto"
        android:text="@string/take_photo"
        android:textColor="@color/white"
        android:background="@color/black"
        app:icon="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138"
        tools:ignore="UsingOnClickInXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scanText"
        android:layout_width="167dp"
        android:layout_height="73dp"
        android:background="@color/black"
        android:backgroundTint="#FC000000"
        android:onClick="scanText"
        android:text="@string/scan_text"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_document_scanner_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138"
        tools:ignore="UsingOnClickInXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GENERATE"
        android:layout_width="167dp"
        android:layout_height="73dp"
        android:layout_marginTop="301dp"
        android:onClick="GENERATE"
        android:text="@string/generate"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhoto"
        app:layout_constraintVertical_bias="0.600"
        tools:ignore="UsingOnClickInXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginStart="291dp"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="UsingOnClickInXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/capturedImage"

        >

        <TextView
            android:id="@+id/scannedText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/keywords_textview"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:lineBreakStyle="loose"
            android:maxLines="@integer/material_motion_duration_long_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capturedImage" />

        <TextView
            android:id="@+id/filteredText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="FILTERED TEXT APPEARS HERE"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:lineBreakStyle="loose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scannedText" />
    </LinearLayout>

    <ImageView
        android:id="@+id/capturedImage"
        android:layout_width="249dp"
        android:layout_height="294dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409"
        app:srcCompat="@drawable/ic_baseline_image_24" />


</androidx.constraintlayout.widget.ConstraintLayout>


